# LatticeAlgorithms

./: .gitmodules  CMakeLists.txt  README.md
docs/: ~$чет по курсовой работе Огнев 381808-2 7 семестр.docx  ВКР Огнев.docx  Отчет по курсовой работе Огнев 381808-2 5 семестр.docx  Отчет по курсовой работе Огнев 381808-2 7 семестр.docx  Отчет по курсовой работе Огнев 381808-2.docx  перевод.docx
docs/code/: CVP.py  HNF.py  __main__.py  utils.py  wolfram.py
include/: algorithms.h  algorithms.hpp  my_matrix.hpp  problems.hpp  utils.h  utils.hpp
src/: algorithms.cpp  axpy.cl  main.cpp  problems.cpp  utils.cpp
tex/: CMakeLists.txt  main.aux  main.out  main.synctex(busy)  main.tex  main.toc
tex/docs/: main.aux  main.toc
tex/docs/in/: 2.main_part.tex  3.conclusion.tex  conventions_list.tex
tex/in/: 0.title.tex  1.annotation.tex  2.conventions_list.tex  3.intro.tex  4.main_part.tex  5.conclusion.tex  6.bibliography.tex  7.additional.tex  annotation.tex  preambule.tex  title.tex
tex/in/main_part/: 4.0.basic_concepts.tex  4.1.formulation_of_problem.tex  4.2.overview_of_sources.tex  4.2.overview_of_used_instruments.tex  4.3.overview_of_sources.tex  4.3.overview_of_used_instruments.tex  4.4.HNF.tex  4.4.overview_of_existing_solutions.tex  4.5.CVP.tex  4.5.overview_of_implementation.tex  4.6.overview_of_implementation.tex
